css/styles.css
/* ... */
/* HTML5 display-role reset for older browsers */
article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, section {display: block;}
body {line-height: 1;}
ol, ul {list-style: none;}
blockquote, q {quotes: none;}
blockquote:before, blockquote:after,
q:before, q:after {content: '';content: none;}
table {border-collapse: collapse;border-spacing: 0;}
/*RESET CSS ENDS*/

/*general Body Font*/
body {font-family: Helvetica, sans-serif;background-color: #000;}

/*NAVBAR CSS BEGINS*/
#topbar{position:fixed;top:0;display:block;float:none;width:100%;height:auto;background: none;z-index:10;/*border:1px solid yellow;*/}
#bottombar{position:absolute;bottom:0;display:block;width:100%;height:75px;background-color:#000;z-index:10;}
.nidlogo{display:block;float:left;margin:20px 0 20px 20px;width:25%;height:30px;z-index:20;background:url(../img/NID_white_logo.png) no-repeat center;}
.register_now{display:block;float:left;height: auto;margin:20px 0;width:100%;z-index:11;text-align: center}
.register_now h4.white{color:#fff;bottom:10px;text-align:right;}
.register_now .btn {border: 1px solid #982cff; color: #17ffdd !important; font-size: 14px; padding: 10px 20px; margin: 0 !important; text-decoration: none; vertical-align: middle;}
.register_now .btn:hover {background: #17ffdd;color: #982cff !important;}
/*NAVBAR CSS ENDS*/

/*HOME SECTION CSS BEGINS*/
#home {background: #020507;width: 100%;height: auto;min-height: 800px;z-index: 0;position: relative;}
#home .shadow-overlay {position: absolute;top: 0;left: 0;width: 100%;height: 100%;opacity: .9;
  background: -moz-linear-gradient(left, black 0%, black 20%, transparent 100%);  /* FF3.6-15 */
  background: -webkit-linear-gradient(left, black 0%, black 20%, transparent 100%);  /* Chrome10-25,Safari5.1-6 */
  background: linear-gradient(to right, black 0%, black 20%, transparent 100%);  /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#000000', endColorstr='#00000000', GradientType=1);  /* IE6-9 */}
#home .row {max-width: 1290px;}
#home.home-static {background-image: url(../images/home-bg.jpg) no-repeat center;-webkit-background-size: cover;-moz-background-size: cover;background-size: cover;}
#home.home-particles {overflow: hidden;background: #020507 /*url('../img/star_mid.png') no-repeat center/ 100%*/;}
#home.home-particles .pg-canvas {position: absolute;top: 0;left: 0;height: 100% !important;width: 100% !important;opacity: .35;background: url('../img/star_tiny.png') no-repeat center/ cover;z-index: 1 !important;}
#home.home-particles .shadow-overlay {display: none;}
#home.home-slides {height: 100% !important;}



@-webkit-keyframes vertical {
  0%, 60%, 80%, 100% {
    -webkit-transform: translateY(0);
  }
  20% {
    -webkit-transform: translateY(-5px);
  }
  40% {
    -webkit-transform: translateY(20px);
  }
}
@keyframes vertical {
  0%, 60%, 80%, 100% {
    -webkit-transform: translateY(0);
  }
  20% {
    -webkit-transform: translateY(-5px);
  }
  40% {
    -webkit-transform: translateY(20px);
  }
}

/* DFrost Logo css */
.logo-wrapper {display: block; float:left; height: 500px; width: 100%; /*border: 1px solid #17ffdd; */}
.logo-wrapper #logo_back {display:block;float: left;position: absolute; z-index: 8; background: url("../img/layer1.svg") no-repeat 10px 10px/30%;top: 50px; left: 45%; margin-left: -130px; height: inherit; width: inherit; -moz-animation-duration: 1s;   -webkit-animation-duration: 1s;   animation-duration: 1s;}
.logo-wrapper #logo_mid {display:block;float: left;position: absolute; z-index: 9; background: url("../img/layer2.svg") no-repeat 10px 10px/30%;top: 50px; left: 45%; margin-left: -130px; height: inherit; width: inherit; -moz-animation-duration: 2s;   -webkit-animation-duration: 2s;   animation-duration: 2s;}
.logo-wrapper #logo_front {display:block;float: left;position: absolute; z-index: 10; background: url("../img/layer3.svg") no-repeat 10px 10px/30%;top: 50px; left: 45%; margin-left: -130px; height: inherit; width: inherit; -moz-animation-duration: 3s;  -webkit-animation-duration: 3s;   animation-duration: 3s;}

/*Menu elements start here*/


.open {position: fixed;top: 12px;right: 40px;width: 50px;height: 50px;display: block;cursor: pointer;z-index: 20;-webkit-transition: opacity 0.2s linear;transition: opacity 0.2s linear;}
.open:hover {opacity: 0.8;}
.open span {display: block;float: left;clear: both;height: 4px;width: 40px;border-radius: 40px;background-color: #fff;position: absolute;right: 3px;top: 3px;z-index: 19;overflow: hidden;-webkit-transition: all 0.4s ease;transition: all 0.4s ease;}
.open span:nth-child(1) {margin-top: 10px;z-index: 19;}
.open span:nth-child(2) {margin-top: 25px;z-index: 19;}
.open span:nth-child(3) {margin-top: 40px;z-index: 19;}
.sub-menu {-webkit-transition: all 0.8s cubic-bezier(0.68, -0.55, 0.265, 1.55);transition: all 0.8s cubic-bezier(0.68, -0.55, 0.265, 1.55);height: 0;width: 0;right: 0;top: 20px;position: absolute;background-color: rgba(255, 0, 195, 0.3);border-radius: 50%;z-index: 23;overflow: hidden;}
.sub-menu li {
  display: block;
  float: right;
  clear: both;
  height: auto;
  margin-right: -160px;
  -webkit-transition: all 0.5s cubic-bezier(0.68, -0.55, 0.265, 1.55);
  transition: all 0.5s cubic-bezier(0.68, -0.55, 0.265, 1.55);
}
.sub-menu li:first-child {
  margin-top: 190px;
}
.sub-menu li:nth-child(1) {
  -webkit-transition-delay: 0.05s;
}
.sub-menu li:nth-child(2) {
  -webkit-transition-delay: 0.10s;
}
.sub-menu li:nth-child(3) {
  -webkit-transition-delay: 0.15s;
}
.sub-menu li:nth-child(4) {
  -webkit-transition-delay: 0.20s;
}
.sub-menu li:nth-child(5) {
  -webkit-transition-delay: 0.25s;
}
.sub-menu li:nth-child(6) {
  -webkit-transition-delay: 0.35s;
}
.sub-menu li:nth-child(7) {
  -webkit-transition-delay: 0.35s;
}
.sub-menu li:nth-child(8) {
  -webkit-transition-delay: 0.40s;
}
.sub-menu li:nth-child(9) {
  -webkit-transition-delay: 0.45s;
}
/* ... */

